# rules_ts_source_map_issue

./: .gitignore  BUILD.bazel  WORKSPACE.bazel  package.json  pnpm-lock.yaml  tsconfig.json
src/: a.ts
